-- ============================================================
-- MPD PostgreSQL - Application de gestion des élèves
-- ============================================================

-- ============================================================
-- 1. PERSONNES ET COMPTES UTILISATEURS
-- ============================================================

CREATE TABLE personne (
                          id_personne BIGINT GENERATED BY DEFAULT AS IDENTITY,
                          nom VARCHAR(100) NOT NULL,
                          prenom VARCHAR(100) NOT NULL,
                          email_contact VARCHAR(255),
                          telephone VARCHAR(30),
                          adresse VARCHAR(500),

                          CONSTRAINT pk_personne PRIMARY KEY (id_personne)
);

CREATE TABLE compte_utilisateur (
                                    id_utilisateur BIGINT GENERATED BY DEFAULT AS IDENTITY,
                                    id_personne BIGINT NOT NULL,
                                    email_connexion VARCHAR(255) NOT NULL,
                                    mot_de_passe_hash VARCHAR(255) NOT NULL,
                                    role VARCHAR(30) NOT NULL,
                                    actif BOOLEAN NOT NULL DEFAULT TRUE,
                                    date_creation TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,

                                    CONSTRAINT pk_compte_utilisateur
                                        PRIMARY KEY (id_utilisateur),

                                    CONSTRAINT uq_compte_utilisateur_personne
                                        UNIQUE (id_personne),

                                    CONSTRAINT uq_compte_utilisateur_email
                                        UNIQUE (email_connexion),

                                    CONSTRAINT ck_compte_utilisateur_role
                                        CHECK (role IN ('ADMIN', 'ENSEIGNANT', 'RESPONSABLE')),

                                    CONSTRAINT fk_compte_utilisateur_personne
                                        FOREIGN KEY (id_personne)
                                            REFERENCES personne (id_personne)
                                            ON DELETE CASCADE
);

-- ============================================================
-- 2. SPECIALISATIONS DE PERSONNE
-- ============================================================

CREATE TABLE eleve (
                       id_personne BIGINT,
                       matricule VARCHAR(50) NOT NULL,
                       date_naissance DATE NOT NULL,
                       photo_url VARCHAR(500),

                       CONSTRAINT pk_eleve
                           PRIMARY KEY (id_personne),

                       CONSTRAINT uq_eleve_matricule
                           UNIQUE (matricule),

                       CONSTRAINT fk_eleve_personne
                           FOREIGN KEY (id_personne)
                               REFERENCES personne (id_personne)
                               ON DELETE CASCADE
);

CREATE TABLE responsable (
                             id_personne BIGINT,
                             profession VARCHAR(150),

                             CONSTRAINT pk_responsable
                                 PRIMARY KEY (id_personne),

                             CONSTRAINT fk_responsable_personne
                                 FOREIGN KEY (id_personne)
                                     REFERENCES personne (id_personne)
                                     ON DELETE CASCADE
);

CREATE TABLE enseignant (
                            id_personne BIGINT,
                            numero_employe VARCHAR(50) NOT NULL,

                            CONSTRAINT pk_enseignant
                                PRIMARY KEY (id_personne),

                            CONSTRAINT uq_enseignant_numero_employe
                                UNIQUE (numero_employe),

                            CONSTRAINT fk_enseignant_personne
                                FOREIGN KEY (id_personne)
                                    REFERENCES personne (id_personne)
                                    ON DELETE CASCADE
);

-- ============================================================
-- 3. STRUCTURE SCOLAIRE
-- ============================================================

CREATE TABLE classe (
                        id_classe BIGINT GENERATED BY DEFAULT AS IDENTITY,
                        id_professeur_principal BIGINT,
                        nom VARCHAR(100) NOT NULL,
                        niveau VARCHAR(50) NOT NULL,
                        annee_scolaire VARCHAR(20) NOT NULL,

                        CONSTRAINT pk_classe
                            PRIMARY KEY (id_classe),

                        CONSTRAINT uq_classe_nom_annee
                            UNIQUE (nom, annee_scolaire),

                        CONSTRAINT fk_classe_professeur_principal
                            FOREIGN KEY (id_professeur_principal)
                                REFERENCES enseignant (id_personne)
                                ON DELETE SET NULL
);

CREATE TABLE matiere (
                         id_matiere BIGINT GENERATED BY DEFAULT AS IDENTITY,
                         code VARCHAR(30) NOT NULL,
                         nom VARCHAR(100) NOT NULL,

                         CONSTRAINT pk_matiere
                             PRIMARY KEY (id_matiere),

                         CONSTRAINT uq_matiere_code
                             UNIQUE (code)
);

CREATE TABLE periode (
                         id_periode BIGINT GENERATED BY DEFAULT AS IDENTITY,
                         libelle VARCHAR(100) NOT NULL,
                         date_debut DATE NOT NULL,
                         date_fin DATE NOT NULL,
                         date_debut_saisie DATE,
                         date_fin_saisie DATE,
                         statut VARCHAR(30) NOT NULL,

                         CONSTRAINT pk_periode
                             PRIMARY KEY (id_periode),

                         CONSTRAINT ck_periode_dates
                             CHECK (date_fin >= date_debut),

                         CONSTRAINT ck_periode_dates_saisie
                             CHECK (
                                 date_fin_saisie IS NULL
                                     OR date_debut_saisie IS NULL
                                     OR date_fin_saisie >= date_debut_saisie
                                 )
);

-- ============================================================
-- 4. INSCRIPTION ET SCOLARITE
-- ============================================================

CREATE TABLE inscription (
                             id_inscription BIGINT GENERATED BY DEFAULT AS IDENTITY,
                             id_eleve BIGINT NOT NULL,
                             date_inscription DATE NOT NULL,
                             date_fin DATE,
                             statut VARCHAR(30) NOT NULL,

                             CONSTRAINT pk_inscription
                                 PRIMARY KEY (id_inscription),

                             CONSTRAINT ck_inscription_dates
                                 CHECK (
                                     date_fin IS NULL
                                         OR date_fin >= date_inscription
                                     ),

                             CONSTRAINT fk_inscription_eleve
                                 FOREIGN KEY (id_eleve)
                                     REFERENCES eleve (id_personne)
);

CREATE TABLE scolarite (
                           id_scolarite BIGINT GENERATED BY DEFAULT AS IDENTITY,
                           id_eleve BIGINT NOT NULL,
                           id_classe BIGINT NOT NULL,
                           date_debut DATE NOT NULL,
                           date_fin DATE,
                           statut VARCHAR(30) NOT NULL,

                           CONSTRAINT pk_scolarite
                               PRIMARY KEY (id_scolarite),

                           CONSTRAINT uq_scolarite_eleve_classe_debut
                               UNIQUE (id_eleve, id_classe, date_debut),

                           CONSTRAINT ck_scolarite_dates
                               CHECK (
                                   date_fin IS NULL
                                       OR date_fin >= date_debut
                                   ),

                           CONSTRAINT fk_scolarite_eleve
                               FOREIGN KEY (id_eleve)
                                   REFERENCES eleve (id_personne),

                           CONSTRAINT fk_scolarite_classe
                               FOREIGN KEY (id_classe)
                                   REFERENCES classe (id_classe)
);

CREATE TABLE responsabilite_legale (
                                       id_responsable BIGINT NOT NULL,
                                       id_eleve BIGINT NOT NULL,

                                       CONSTRAINT pk_responsabilite_legale
                                           PRIMARY KEY (id_responsable, id_eleve),

                                       CONSTRAINT fk_responsabilite_legale_responsable
                                           FOREIGN KEY (id_responsable)
                                               REFERENCES responsable (id_personne)
                                               ON DELETE CASCADE,

                                       CONSTRAINT fk_responsabilite_legale_eleve
                                           FOREIGN KEY (id_eleve)
                                               REFERENCES eleve (id_personne)
                                               ON DELETE CASCADE
);

-- ============================================================
-- 5. ENSEIGNEMENTS ET EVALUATIONS
-- ============================================================

CREATE TABLE enseignement (
                              id_enseignement BIGINT GENERATED BY DEFAULT AS IDENTITY,
                              id_enseignant BIGINT NOT NULL,
                              id_classe BIGINT NOT NULL,
                              id_matiere BIGINT NOT NULL,
                              coefficient_matiere NUMERIC(5, 2) NOT NULL DEFAULT 1,
                              date_debut DATE NOT NULL,
                              date_fin DATE,
                              actif BOOLEAN NOT NULL DEFAULT TRUE,

                              CONSTRAINT pk_enseignement
                                  PRIMARY KEY (id_enseignement),

                              CONSTRAINT uq_enseignement_affectation
                                  UNIQUE (
                                          id_enseignant,
                                          id_classe,
                                          id_matiere,
                                          date_debut
                                      ),

                              CONSTRAINT ck_enseignement_coefficient
                                  CHECK (coefficient_matiere > 0),

                              CONSTRAINT ck_enseignement_dates
                                  CHECK (
                                      date_fin IS NULL
                                          OR date_fin >= date_debut
                                      ),

                              CONSTRAINT fk_enseignement_enseignant
                                  FOREIGN KEY (id_enseignant)
                                      REFERENCES enseignant (id_personne),

                              CONSTRAINT fk_enseignement_classe
                                  FOREIGN KEY (id_classe)
                                      REFERENCES classe (id_classe),

                              CONSTRAINT fk_enseignement_matiere
                                  FOREIGN KEY (id_matiere)
                                      REFERENCES matiere (id_matiere)
);

CREATE TABLE evaluation (
                            id_evaluation BIGINT GENERATED BY DEFAULT AS IDENTITY,
                            id_enseignement BIGINT NOT NULL,
                            id_periode BIGINT NOT NULL,
                            libelle VARCHAR(150) NOT NULL,
                            date_evaluation DATE NOT NULL,
                            type_evaluation VARCHAR(50) NOT NULL,
                            coefficient_evaluation NUMERIC(5, 2) NOT NULL DEFAULT 1,
                            bareme NUMERIC(5, 2) NOT NULL DEFAULT 20,

                            CONSTRAINT pk_evaluation
                                PRIMARY KEY (id_evaluation),

                            CONSTRAINT ck_evaluation_coefficient
                                CHECK (coefficient_evaluation > 0),

                            CONSTRAINT ck_evaluation_bareme
                                CHECK (bareme > 0),

                            CONSTRAINT fk_evaluation_enseignement
                                FOREIGN KEY (id_enseignement)
                                    REFERENCES enseignement (id_enseignement),

                            CONSTRAINT fk_evaluation_periode
                                FOREIGN KEY (id_periode)
                                    REFERENCES periode (id_periode)
);

-- ============================================================
-- 6. BULLETINS ET LIGNES DE BULLETIN
-- ============================================================

CREATE TABLE bulletin (
                          id_bulletin BIGINT GENERATED BY DEFAULT AS IDENTITY,
                          id_scolarite BIGINT NOT NULL,
                          id_periode BIGINT NOT NULL,
                          id_validateur BIGINT,
                          date_generation DATE,
                          moyenne_generale NUMERIC(5, 2),
                          appreciation_generale TEXT,
                          statut VARCHAR(30) NOT NULL,
                          date_validation TIMESTAMP WITH TIME ZONE,

                          CONSTRAINT pk_bulletin
                              PRIMARY KEY (id_bulletin),

                          CONSTRAINT uq_bulletin_scolarite_periode
                              UNIQUE (id_scolarite, id_periode),

                          CONSTRAINT ck_bulletin_moyenne
                              CHECK (
                                  moyenne_generale IS NULL
                                      OR moyenne_generale >= 0
                                  ),

                          CONSTRAINT fk_bulletin_scolarite
                              FOREIGN KEY (id_scolarite)
                                  REFERENCES scolarite (id_scolarite),

                          CONSTRAINT fk_bulletin_periode
                              FOREIGN KEY (id_periode)
                                  REFERENCES periode (id_periode),

                          CONSTRAINT fk_bulletin_validateur
                              FOREIGN KEY (id_validateur)
                                  REFERENCES enseignant (id_personne)
                                  ON DELETE SET NULL
);

CREATE TABLE ligne_bulletin (
                                id_ligne_bulletin BIGINT GENERATED BY DEFAULT AS IDENTITY,
                                id_bulletin BIGINT NOT NULL,
                                id_enseignement BIGINT NOT NULL,
                                texte TEXT,
                                date_saisie TIMESTAMP WITH TIME ZONE,
                                date_modification TIMESTAMP WITH TIME ZONE,
                                statut VARCHAR(30) NOT NULL,

                                CONSTRAINT pk_ligne_bulletin
                                    PRIMARY KEY (id_ligne_bulletin),

                                CONSTRAINT uq_ligne_bulletin_enseignement
                                    UNIQUE (id_bulletin, id_enseignement),

                                CONSTRAINT fk_ligne_bulletin_bulletin
                                    FOREIGN KEY (id_bulletin)
                                        REFERENCES bulletin (id_bulletin)
                                        ON DELETE CASCADE,

                                CONSTRAINT fk_ligne_bulletin_enseignement
                                    FOREIGN KEY (id_enseignement)
                                        REFERENCES enseignement (id_enseignement)
);

-- ============================================================
-- 7. NOTES
-- ============================================================

CREATE TABLE note (
                      id_note BIGINT GENERATED BY DEFAULT AS IDENTITY,
                      id_scolarite BIGINT NOT NULL,
                      id_evaluation BIGINT NOT NULL,
                      valeur NUMERIC(5, 2) NOT NULL,
                      commentaire TEXT,
                      statut_note VARCHAR(30) NOT NULL,
                      date_saisie TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,

                      CONSTRAINT pk_note
                          PRIMARY KEY (id_note),

                      CONSTRAINT uq_note_scolarite_evaluation
                          UNIQUE (id_scolarite, id_evaluation),

                      CONSTRAINT ck_note_valeur
                          CHECK (valeur >= 0),

                      CONSTRAINT fk_note_scolarite
                          FOREIGN KEY (id_scolarite)
                              REFERENCES scolarite (id_scolarite),

                      CONSTRAINT fk_note_evaluation
                          FOREIGN KEY (id_evaluation)
                              REFERENCES evaluation (id_evaluation)
);